--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="/src/css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="/src/css/stylesheet.css">
-	<link rel="stylesheet" href="/src/css/style.min.css">
+	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Document</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
 		<div class="container">
 			<header class="header">
 				<a href="#" class="header__logo">
-					<img src="/src/icons/logo.png" alt="logo">
+					<img src="icons/logo.png" alt="logo">
 				</a>
 				<div class="header__official">
 					Официальный представитель
@@ -31,7 +31,7 @@
 
 				<div class="promo__icons">
 					<div class="promo__icon">
-						<img src="icons/timer.png" alt="timer">  <br> Время подбора: 10 минут</div>
+						<img src="icons/timer.png" alt="timer">   Время подбора: 10 минут</div>
 					<div class="promo__icon">
 						<img src="icons/hand_cart.png" alt="hand_cart">
 						Бесплатная 
