--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,40 @@
 		  
 		</div>
 	</div>
+	<section class="advantages">
+		<h1 class="title">НАШИ ПРЕИМУЩЕСТВА</h1>
+		<div class="advantages__wrapper">
+			<div class="advantages__card">
+				<img src="icons/cup.png" alt="cup" class="advantages__icon">
+				<div class="advantages__subtitle">Делимся опытом</div>
+				<div class="advantages__descr">Наши сотрудники всегда готовы поделиться своим опытом, так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
+				</img>
+			</div>
+			<div class="advantages__card">
+				<img src="icons/heart.png" alt="heart" class="advantages__icon">
+				<div class="advantages__subtitle">Заботимся о здоровье</div>
+				<div class="advantages__descr">Мы работаем для того, чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
+				</img>
+			</div>
+			<div class="advantages__card">
+				<img src="icons/shoe.png" alt="" class="advantages__icon">
+				<div class="advantages__subtitle">Учим бегать</div>
+				<div class="advantages__descr">Помогаем с обучением правильной технике бега! Дружим с крупнейшей школой бега в России - <a href="#" class="advantages__link">I LOVE RUNNING.</a> </div>
+				</img>
+			</div>
+		</div>
+	</section>
+	<div class="consultation">
+		<div class="container">
+			<h2 class="title title_left">Получите бесплатную консультацию <br> по подбору пульсометра </h2>
+			<div class="consultation__descr">Просто заполните форму заявки <br> и мы перезвоним вам в течении 10 минут</div>
+			<form class="feed-form" action="#">
+				<input name="name" required placeholder="name" type="text">
+				<input name="phone" required placeholder="phone" type="tel">
+				<input name="email" required placeholder="email" type="email">
+				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+		</div>
+	</div>
 </body>
 </html>
