--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
+	<link rel="stylesheet" href="css/slick.css">
 	<link rel="stylesheet" href="css/style.min.css">
 	<title>Document</title>
 </head>
@@ -87,5 +88,19 @@
 			</form>
 		</div>
 	</div>
+	<section class="carousel">
+	<div class="container">
+		<div class="carousel__inner">
+			<div><img src="img/slide_1.png" alt="slide_1"></div>
+			<div><img src="img/slide_2.png" alt="slide_2"></div>
+			<div><img src="img/slide_3.png" alt="slide_3"></div>
+		  </div>
+	</div>
+					  
+	</section>
+	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script src="js/slick.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
