--- a/src/index.html
+++ b/src/index.html
@@ -350,6 +350,40 @@
 			
 		</div>
 	</section>
+	<section class="rewiews">
+		<div class="container">
+			<div class="title">отзывы клиентов</div>
+			<div class="rewiews__block">
+				<img src="img/photo_1.png" alt="photo" class="rewiew__img"></img>
+				<div class="rewiew__descr">
+					<div class="rewiews__title">Ирина Иванченко </div>
+					<div class="rewiews__subtitle">2 полумарафона</div>
+					<div class="rewiews__rewiew">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали пульсометр, который подошёл именно под мои цели и финансовые возможности. <br> Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же. <br><br> Новые цели - новый гаджет!
+						 <br><br> Спасибо, RunSmart! </div>
+				</div>
+				</div>
+			
+			<div class="rewiews__block">
+				<img src="img/photo_2.png" alt="photo" class="rewiew__img"></img>
+				<div class="rewiew__descr">
+					<div class="rewiews__title">Иван Сёмочкин</div>
+					<div class="rewiews__subtitle">1 полумарафон</div>
+					<div class="rewiews__rewiew">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br> Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы анатомии, составили план тренировок на месяц вперёд. <br><br> С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+				</div>
+				</div>
+			
+			<div class="rewiews__block">
+					<img src="img/photo_3.png" alt="photo" class="rewiew__img"></img>
+				<div class="rewiew__descr">
+					<div class="rewiews__title">Юлия Дашкина</div>
+					<div class="rewiews__subtitle">2 полумарафона</div>
+					<div class="rewiews__rewiew">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и решила попробовать. <br><br> Позвонила, ребята поинтересовались моими целями и подобрали очень интересный вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2 полумарафона и несколько более коротких забегов и не намерена останавливаться! <br><br> Спасибо!!!</div>
+				</div>
+				</div>
+		
+
+		</div>
+	</section>
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
