--- a/src/index.html
+++ b/src/index.html
@@ -384,6 +384,32 @@
 
 		</div>
 	</section>
+	<footer class="footer">
+		<!-- <div class="footer__map"></div> -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16020.209699987818!2d21.018700735962618!3d52.22460214933088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x471eccf1f44866b7%3A0x396166a11ab769b2!2sWsp%C3%B3lna%2041%2C%2000-519%20Warszawa!5e0!3m2!1sru!2spl!4v1652257406205!5m2!1sru!2spl" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		<div class="footer__info">
+			<address class="footer__addr">Wspólna 41</address>
+			<a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
+			<div class="footer__social">
+				<a href="#"><div class="footer__social-item"><img src="icons/facebook.svg" alt="facebook"></div></a>
+				<a href="#"><div class="footer__social-item"><img src="icons/instagram.svg" alt="instagram"></div></a>
+				<a href=""><div class="footer__social-item"><img src="icons/pinterest.svg" alt="pinterest"></div></a>
+			</div>
+		</div>
+	</footer>
+	<div class="overlay">
+		<div class="modal">
+			<div class="modal__close">&times;</div>
+			<div class="modal__subtitle"></div>
+			<div class="modal__descr"></div>
+			<form class="feed-form" action="#">
+				<input name="name" required placeholder="name" type="text">
+				<input name="phone" required placeholder="phone" type="tel">
+				<input name="email" required placeholder="email" type="email">
+				<button class="button button__submit">заказать кОНСУЛЬТАЦИЮ</button>
+			</form>
+		</div>
+	</div>
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 	<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="js/slick.min.js"></script>
